
You should have received a copy of the GNU General Public License
along with EditXT.  If not, see <http://www.gnu.org/licenses/>.

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This file contains notable new features and other large changes. See
the source repository for the gory details of what actually happened.

????-??-?? - 1.4.0
  - Add syntax definitions for shell scripts and Objective C

2013-09-22 - 1.3.0
  - Omit command from history if it has a leading space.
  - Integrate GUI and hotkey commands with command bar history.
  - Improve indent size calculation.
  - Added status message output to command bar.
  - Log config file path on load.
  - Move document defaults to config file:
    indent:
      mode: (space|tab) # default is space
      size: 4
    newline_mode: (LF|CR|CRLF|UNICODE) # default is LF
    soft_wrap: (none|word)
  - Added commands:
    - Clear highlighted text (clear_highlighted_text).
    - Reload config (reload_config)
    - "set <variable> ..." to set document variables:
      - highlight_selected_text
      - indent
      - newline_mode
      - soft_wrap
  - Make Preferences... menu item open config file.
  - Add config file (~/.editxt/config.yaml) with selection matching settings:
    highlight_selected_text:
      enabled: (yes|no) # default is yes
      color: FEFF6B
  - Mark occurrences when counting with the find dialog.
  - Mark (highlight) all occurrences of selected text (length > 3, containing
    no spaces), yellow for now.
  - Allow close document from menu and with COMMAND+W hotkey
  - Many improvements on command bar
    - More commands: wrap, sort, find/replace
    - Argument placeholders/hints
    - Tab completion
    - Command history
  - Improve exception logging.
  - Fix bugs related to app termination with unsaved documents.
  - Fix log file syntax highlighting.
  - Fix startup errors due to strange arguments passed by OS X.
  - Fix long pause on quit with many documents open.
